--- a/coffee/templates/coffee/servicio.html
+++ b/coffee/templates/coffee/servicio.html
@@ -30,10 +30,6 @@
     </div>
 </header>
 
-
-
-
-
 <div class="about-us-section">
     <div class="about-us-container">
         <div class="about-us-text">
@@ -47,147 +43,13 @@
                 Durante años, nos hemos dedicado a perfeccionar cada taza, seleccionando los mejores granos, tostados con pasión y servidos con una sonrisa.
                 Hoy, nuestro compromiso sigue siendo el mismo: ofrecer un lugar donde puedas disfrutar de momentos inolvidables con un café que toque tu alma.
             </p>
-            <button href="{% url 'servicio' %}" class="read-more-btn">Leer más</button>
+            <button class="read-more-btn">Leer más</button>
         </div>
         <div class="about-us-image">
             <img src="{% static 'coffee/img/about.jpg' %}" alt="Café y amigos">
         </div>
     </div>
 </div>
-
-
-
-
-
-<div class="menu-section">
-    <div class="menu-header">
-        <h2>Nuestro menú especial</h2>
-        <h3>Elige el sabor de tu café</h3>
-        <p>Disfruta de nuestras deliciosas selecciones de café, preparadas con amor y los mejores ingredientes.</p>
-    </div>
-    <div class="menu-container">
-        <div class="menu-item">
-            <img src="{% static 'coffee/img/caffe-latte.jpg' %}" alt="Caffe Latte">
-            <div class="menu-content">
-                <h4>Caffe Latte <span>—————— $2.95</span></h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-        </div>
-        <div class="menu-item">
-            <img src="{% static 'coffee/img/iced-caramel-latte.jpg' %}" alt="Iced Caramel Latte">
-            <div class="menu-content">
-                <h4>Iced Caramel Latte <span>—— $4.67</span></h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-        </div>
-        <div class="menu-item">
-            <img src="{% static 'coffee/img/caffe-mocha.jpg' %}" alt="Caffe Mocha">
-            <div class="menu-content">
-                <h4>Caffe Mocha <span>————— $3.67</span></h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-        </div>
-        <div class="menu-item">
-            <img src="{% static 'coffee/img/white-chocolate-mocha.jpg' %}" alt="White Chocolate Mocha">
-            <div class="menu-content">
-                <h4>White Chocolate Mocha <span> — $2.79</span></h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-        </div>
-        <div class="menu-item">
-            <img src="{% static 'coffee/img/caffe-americano.jpg' %}" alt="Caffe Americano">
-            <div class="menu-content">
-                <h4>Caffe Americano <span>——— $3.06</span></h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-        </div>
-        <div class="menu-item">
-            <img src="{% static 'coffee/img/iced-smoked-latte.jpg' %}" alt="Iced Smoked Latte">
-            <div class="menu-content">
-                <h4>Iced Smoked Latte <span>—— $3.05</span></h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-        </div>
-        <div class="menu-item">
-            <img src="{% static 'coffee/img/espresso-macchiato.jpg' %}" alt="Espresso Macchiato">
-            <div class="menu-content">
-                <h4>Espresso Macchiato <span>— $2.98</span></h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-        </div>
-        <div class="menu-item">
-            <img src="{% static 'coffee/img/caramel-macchiato.jpg' %}" alt="Caramel Macchiato">
-            <div class="menu-content">
-                <h4>Caramel Macchiato <span>—— $2.54</span></h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
-<section class="coffee-types" id="productos">
-    <div class="menu-header">
-        <h2>Café Especial</h2>
-        <h3>Nuestros Sabores Destacados</h3>
-        <p>Disfruta de nuestras deliciosas selecciones de café, preparadas con amor y los mejores ingredientes.</p>
-    </div>
-    <div class="coffee-grid">
-
-        <div class="coffee-item">
-            <img src="{% static 'coffee/img/espresso.jpg' %}" alt="Espresso">
-            <h3>Espresso</h3>
-            <p>Un café fuerte y aromático perfecto para comenzar el día.</p>
-        </div>
-
-        <div class="coffee-item-dos">
-            <img src="{% static 'coffee/img/cappuccino.jpg' %}" alt="Cappuccino">
-            <h3>Cappuccino</h3>
-            <p>Una mezcla perfecta de espresso, leche y espuma cremosa.</p>
-        </div>
-
-        <div class="coffee-item-tres">
-            <img src="{% static 'coffee/img/latte.jpg' %}" alt="Latte">
-            <h3>Latte</h3>
-            <p>Un café suave con un toque de leche para endulzar tu día.</p>
-        </div>
-    </div>
-</section>
-
-
-
-
-
-<div class="features-section">
-    <div class="features-container">
-        <div class="feature-item">
-            <img src="{% static 'coffee/img/free-delivery.png' %}" alt="Free Delivery">
-            <h4>Entrega gratis</h4>
-            <p>Entregas en ordenes mayores a $100</p>
-        </div>
-        <div class="feature-item">
-            <img src="{% static 'coffee/img/mug-rewards.png' %}" alt="Mug Rewards">
-            <h4>Regalos</h4>
-            <p>Regalos en ordenes mayores a $100</p>
-        </div>
-        <div class="feature-item">
-            <img src="{% static 'coffee/img/sale-discounts.png' %}" alt="Sale & Discounts">
-            <h4>Descuentos</h4>
-            <p>Descuentos en ordenes mayores a $100</p>
-        </div>
-        <div class="feature-item">
-            <img src="{% static 'coffee/img/services-online.png' %}" alt="Services Online">
-            <h4>Servicios Online</h4>
-            <p>Servicios en línea 100%</p>
-        </div>
-    </div>
-</div>
-
-
-
-
-
 
 <div class="newsletter-section">
     <div class="newsletter-container">
